# atk

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
assets/tapes/: demo-hero.tape  demo-search.tape  demo-status.tape
docs/: README.md  ROADMAP.md  atk-commands-spec.md  atk-future.md  atk-home-spec.md  atk-roadmap.md  atk-spec.md  backlog.md  plugin-schema.md
docs/phases/: phase-1-core-cli.md  phase-11-git-sync.md  phase-2-lifecycle.md  phase-3-configuration.md  phase-4-plugin-sources.md
docs/specs/: atk-spec.md  commands-spec.md  git-sync-spec.md  home-spec.md  mcp-agent-configure-spec.md  plugin-schema.md  registry-spec.md
skills/create-atk-plugin/: SKILL.md
skills/release/: SKILL.md
src/atk/: __init__.py  add.py  banner.py  bootstrap.py  claude_memory.py  cli.py  cli_logger.py  config.py  env.py  errors.py  exit_codes.py  fetch.py  git.py  git_source.py  home.py  init.py  install.py  lifecycle.py  manifest.py  manifest_schema.py  mcp.py  mcp_agents.py  mcp_configure.py  plugin.py  plugin_schema.py  registry.py  registry_schema.py  remove.py  sanitize.py  schema.py  setup.py  source.py  start.py  stop.py  update_check.py  upgrade.py  validation.py
src/atk/agents/: auggie_skill.py  claude_skill.py  codex_skill.py  gemini_skill.py  managed_section.py  opencode_skill.py  symlink_skill.py
src/atk/commands/: lifecycle.py  mcp.py  plug.py  preconditions.py  run.py  search.py  status.py  upgrade.py
tests/: __init__.py  conftest.py  test_add.py  test_env.py  test_errors.py  test_git.py  test_git_proxy.py  test_git_source.py  test_home.py  test_init.py  test_install.py  test_lifecycle.py  test_manifest.py  test_manifest_schema.py  test_mcp.py  test_plug.py  test_plugin.py  test_plugin_schema.py  test_registry.py  test_remove.py  test_repo_status.py  test_run.py  test_sanitize.py  test_schema.py  test_setup.py  test_source.py  test_start.py  test_stop.py  test_update_check.py  test_upgrade.py  test_version.py
tests/agents/: test_auggie_skill.py  test_claude_skill.py  test_codex_skill.py  test_gemini_skill.py  test_opencode_skill.py  test_symlink_skill.py
tests/commands/: test_cli.py  test_search.py  test_status.py
(+12 files in other folders)
